Reference, citation, and label cleanup.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@395 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/MonojetLikeModels_Appendix.tex
+++ b/doc/tex/MonojetLikeModels_Appendix.tex
@@ -428,7 +428,7 @@ generated starting from a leading order UFO with \madgraph 2.2.2, using \pythiaE
 The UFO file and parameter cards that will be used as benchmarks 
 for early Run-2 searches in these final states can be found on the Forum SVN repository~\cite{ForumSVN_DMTTBar}.
 Multi-parton merging has been used for the $b \bar{b}$ case but it has not been studied in detail within this Forum. 
-The b-flavored DM model of Section~\ref{} is simulated at LO+PS using \madgraph v2.2.3 and \pythiaEight for the parton shower.  
+The b-flavored DM model of Section~\ref{sec:singleb} is simulated at LO+PS using \madgraph v2.2.3 and \pythiaEight for the parton shower.  
 The corresponding UFO and parameter files can be found on the Forum SVN repository~\cite{ForumSVN_DMSingleB}.
 
 \subsubsection{Quark flavor scheme and masses}
@@ -507,7 +507,7 @@ accounted for by the shower program.
 
 The case of the associated production of a Higgs and scalar mediator via a top-quark loop can be either considered 
 exactly or via an effective Lagrangian where the top-quark is integrated out. While this latter model has 
-been shown not to be reliable~\cite{Haisch:2012kf,,Hespel:2014sla, Baur:1989cm}, for simplicity we have chosen to perform
+been shown not to be reliable~\cite{Haisch:2012kf,Hespel:2014sla,Baur:1989cm}, for simplicity we have chosen to perform
 the study in this tree-level effective formulation. A full study of the process including
 finite top-quark mass and parton shower effects is possible yet left for future work.
 
