--- a/doc/tex/SingleB.tex
+++ b/doc/tex/SingleB.tex
@@ -41,7 +41,7 @@ The Lagrangian considered is given by
 %($g_s^2$) and also possibly diagrams that scale as $g_s^2*g$.
 
 This model is known at LO+PS accuracy, and the studies in this Section use a LO model implementation within \madgraph v2.2.3
-interfaced to \pythiaEight for the parton shower. Further implementation details can be found in Section~\label{sec:TTBar_implementation}.
+interfaced to \pythiaEight for the parton shower. Further implementation details can be found in Section~\ref{sec:TTBar_implementation}.
  
 
 \subsubsection{Parameter scan}
