--- a/doc/tex/TChannelModels.tex
+++ b/doc/tex/TChannelModels.tex
@@ -67,7 +67,7 @@ the case in which only right-handed down-type mediators are present.
 
 Neither of the models in this reference include couplings to the third quark generation, leading to a violation of the MFV assumption. In the case of purely down-type right-handed squarks this is still safe from flavor constraints. Furthermore, reintroducing the third generation squarks would lead to models that produce qualitatively similar signals in the mono-jet and SUSY squark searches, the main difference being the production cross-section. At the same time the presence of third generation squarks will lead to further constraints from other searches such as those for mono-bjets, for stops and for sbottoms, as discussed in Sec.~\ref{sec:singleb}. 
 The studies in this Section
-are performed using a model with a mediator coupling to all three generation, following Ref.~\ref{Bell:2012rg}. 
+are performed using a model with a mediator coupling to all three generation, following Ref.~\cite{Bell:2012rg}. 
 Further differences between the two models (hypercharge, chirality) only lead to a change in the cross-section. 
 The LO UFO model is interfaced to \madgraph{} v2.2.3, but it was not possible to go beyond parton-level studies
 and interface those models to a parton shower in time for the conclusion of this Forum. 
@@ -381,7 +381,7 @@ DM searches should also directly test their sensitivity to the MSSM benchmark mo
 
 The state of the art calculation for these models is LO and they can be interfaced with a parton shower program.
 The studies in this Section use a LO model implementation within \madgraph v2.2.3, but no parton shower could be employed
-in the time-frame of the conclusions of this Forum. Further implementation details can be found in Section~\label{sec:tchannel_implementation}.
+in the time-frame of the conclusions of this Forum. Further implementation details can be found in Section~\ref{sec:tchannel_implementation}.
 
 \subsection{Parameter scan}
 
@@ -418,7 +418,7 @@ bounds one obtains from \MET{}+X searches depend strongly on the width
 of the mediator, as is visible in Figs.~5 and 6 of
 Ref.~\cite{Papucci:2014iwa} and in Fig.~\ref{fig:monojet_tchannel} (a), 
 except in the heavy mediator limit ($\Mphi \approx 2$\,TeV). This figure has been obtained applying
-a simplified analysis selection (cuts on the leading jet \pT$>$150 GeV and $\eta <$ 2.8, \MET{}$>$150 GeV.) using MadAnalysis~\ref{Conte:2014zja,Dumont:2014tja}.
+a simplified analysis selection (cuts on the leading jet \pT$>$150 GeV and $\eta <$ 2.8, \MET{}$>$150 GeV.) using MadAnalysis~\cite{Conte:2014zja,Dumont:2014tja}.
 %In the heavy mediator limit, the rates of the first three diagrams of
 %Fig.~\ref{fig:tchannelMonojet} scale as one with the coupling $g$. 
 %A scan over the width was not available for this report.  Thus we recommend scanning a range of 
