--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -2691,3 +2691,39 @@ SLACcitation   = "%%CITATION = ARXIV:0906.2474;%%",
 	reportNumber   = "CAVENDISH-HEP-99-03, CERN-TH-2000-284, RAL-TR-2000-048",
 	SLACcitation   = "%%CITATION = HEP-PH/0011363;%%",
 }
+
+
+
+@article{Wiesemann:2014ioa,
+      author         = "Wiesemann, M. and Frederix, R. and Frixione, S. and
+                        Hirschi, V. and Maltoni, F. and others",
+      title          = "{Higgs production in association with bottom quarks}",
+      journal        = "JHEP",
+      volume         = "1502",
+      pages          = "132",
+      doi            = "10.1007/JHEP02(2015)132",
+      year           = "2015",
+      eprint         = "1409.5301",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2014-182, CP3-14-64, LPN14-114, MCNET-14-20,
+                        ZU-TH-33-14",
+      SLACcitation   = "%%CITATION = ARXIV:1409.5301;%%",
+}
+
+@article{Hespel:2014sla,
+      author         = "Hespel, Benoit and Lopez-Val, David and Vryonidou, Eleni",
+      title          = "{Higgs pair production via gluon fusion in the
+                        Two-Higgs-Doublet Model}",
+      journal        = "JHEP",
+      volume         = "1409",
+      pages          = "124",
+      doi            = "10.1007/JHEP09(2014)124",
+      year           = "2014",
+      eprint         = "1407.0281",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MCNET-14-12, CP3-14-48",
+      SLACcitation   = "%%CITATION = ARXIV:1407.0281;%%",
+}
+
