All of Steve W's comments
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@398 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/symbols.tex
+++ b/doc/symbols.tex
@@ -9,11 +9,13 @@
 \newcommand{\Mphi}{\ensuremath{M_{\phi}}\xspace}% note lower case \phi
 \newcommand{\mmed}{\mMed}
 \newcommand{\Mmed}{\mMed}
-\newcommand{\gDM}{\ensuremath{g_{\rm{DM}}}\xspace}
+%\newcommand{\gDM}{\ensuremath{g_{\rm{DM}}}\xspace}
+\newcommand{\gDM}{\ensuremath{g_{\chiDM}}\xspace}
 \newcommand{\gdm}{\gDM}
 \newcommand{\gq}{\ensuremath{g_{\rm q}}\xspace}
 \newcommand{\ifb}{\ensuremath{\rm{fb}^{-1}}\xspace}
-\newcommand{\mdm}{\ensuremath{m_{\rm{DM}}}\xspace}
+%\newcommand{\mdm}{\ensuremath{m_{\rm{DM}}}\xspace}
+\newcommand{\mdm}{\ensuremath{m_{\chiDM}}\xspace}
 \newcommand{\mDM}{\mdm}
 \newcommand{\mfmet}{\ensuremath{m(f_{\mathrm{met}})}\xspace}
 \newcommand{\mvmet}{\ensuremath{m(v_{\mathrm{met}})}\xspace}
