--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -185,7 +185,7 @@ the following Lagrangian:
 
 \be \label{ZprimeDM}
 %%\mathscr{
-	L =  \gq  \bar q \gamma^\mu q  Z_\mu' +
+	\mathcal{L} =  \gq  \bar q \gamma^\mu q  Z_\mu' +
 %
 %\left\{ \begin{array}{cc}
 %	%i  \gDM  \chiDM^\dagger \smash{ \overset{\leftrightarrow}{\partial^\mu}}  \chiDM  \Zprime_\mu + \gDM^2 |\chiDM|^2 \Zprime_\mu Z^{\prime\mu} & {\rm scalar}  
@@ -201,7 +201,7 @@ is described by the following Lagrangian term at energies below $m_{\Zprime}$~\f
 	model is used in the model for event generation.}: 
 
 \be \label{U1Beft}
- L_{\rm eff} = - \frac{\gq \gDM }{m_{\Zprime}^2} \bar{q} \gamma^\mu q \bar\chiDM \gamma_\mu \chiDM \Big( 1 + \frac{g_{h \Zprime \Zprime} }{m_{\Zprime}^2} h \Big) \, ,
+ \mathcal{L}_{\rm eff} = - \frac{\gq \gDM }{m_{\Zprime}^2} \bar{q} \gamma^\mu q \bar\chiDM \gamma_\mu \chiDM \Big( 1 + \frac{g_{h \Zprime \Zprime} }{m_{\Zprime}^2} h \Big) \, ,
 \ee
 
 The first term of this equation
@@ -364,7 +364,7 @@ where $a,b$ are new physics couplings and $\lambda_h$ is the Higgs quartic coupl
 The additional Lagrangian terms for this model are: 
 
 \be \label{LintScalar2}
-L \supset - y_\chiDM \bar\chiDM \chiDM (  \cos\theta\:S - \sin\theta\: h ) - \frac{m_q}{v} \bar q q (\cos\theta\: h + \sin\theta\: S )  \,
+\mathcal{L} \supset - y_\chiDM \bar\chiDM \chiDM (  \cos\theta\:S - \sin\theta\: h ) - \frac{m_q}{v} \bar q q (\cos\theta\: h + \sin\theta\: S )  \,
 \ee
 where $\theta$ is the mixing angle between the Higgs boson and the new scalar.
 
@@ -524,7 +524,7 @@ and still give a potentially observable Higgs+\MET signal.
  quarks and leptons:
 
  \begin{equation}
- -{\cal L} \supset  y_u Q \tilde \Phi_u \bar u + y_d Q \Phi_d \bar d + y_e L \Phi_d \bar e  + {\rm h.c.}
+ -{\mathcal{L}} \supset  y_u Q \tilde \Phi_u \bar u + y_d Q \Phi_d \bar d + y_e L \Phi_d \bar e  + {\rm h.c.}
  \end{equation}
  
  After electroweak symmetry breaking, the Higgs doublets attain vacuum expectation values $v_u$ and $v_d$, and in unitary gauge the doublets are parametrized as
