--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -74,15 +74,17 @@ results are presented.
 
 \section{The ATLAS/CMS Dark Matter Forum}
 
-To understand what signal models should be considered for the upcoming LHC Run-2, groups of experimenters from 
-both ATLAS and CMS collaborations have held separate discussions with small groups of
-theorists~\cite{Malik:2014ggr,Yavin:14092893}. 
-Another joint discussion was held at the DM@LHC workshop in Oxford, in 
-September 2014~\cite{DMatLHCProceedings}. 
+To understand what signal models should be considered for the upcoming LHC Run-2, 
+groups of experimenters from both ATLAS and CMS collaborations have held separate 
+%CD: discussions, discussion, discussions. Needs rewording
+meetings with small groups of theorists, and discussed further at the DM@LHC 
+workshop~\cite{Malik:2014ggr,Yavin:14092893,DMatLHCProceedings}. 
+These discussions identified overlapping sets of simplified models as possible
+benchmarks for early LHC Run-2 searches. 
 Following the DM@LHC workshop, ATLAS and CMS organized a forum, called the~\textit{ATLAS-CMS Dark
-Matter Forum}, to form a consensus on the use of simplified models
-and EFTs for Run-2 with the participation of experts on
-theories of Dark Matter. This is the final report of that forum.
+Matter Forum}, to form a consensus on the use of these simplified models
+and EFTs for early Run-2 searches with the participation of experts on
+theories of Dark Matter. This is the final report of the ATLAS-CMS Dark Matter Forum.
 
 One of the guiding principles of this report is to channel the efforts
 of the ATLAS and CMS collaborations towards a minimal basis of dark
@@ -285,7 +287,18 @@ the unique sensitivity of colliders to all possible DM signatures.
 
 \section{Structure of this report and dissemination of results}
 
-Chapter \ref{subsec:MonojetLikeModels} of the report is dedicated to simplified
+The report provides a brief theoretical summary of the models considered, 
+starting from the set of simplified models and contact interactions put forward 
+in previous discussions and in the literature. 
+%CD: no literature here, or we have to cite >100 papers. 
+Its main body documents the studies 
+done within this Forum to identify a kinematically distinct set of model parameters
+to be simulated and used as benchmarks for early Run-2 searches. The implementation
+of these studies according to the state of the art calculations is detailed,
+including instructions on how to estimate theoretical uncertainties in the generators used
+for these studies. The presentation of results for EFT benchmarks is also covered. 
+
+Chapter \ref{subsec:MonojetLikeModels} of this report is dedicated to simplified
 models with radiation of a hard object either from the initial state
 or from the mediator. These models produce primarily monojet signatures, 
 but should be considered for all \MET{}+X searches.
