--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -535,11 +535,11 @@ In this section, we consider a parallel situation to the vector and axial-vector
 Assuming MFV, \spinzero resonances behave in a similar fashion as the SM Higgs boson. Relative to the vector and axial-vector models discussed above, the scalar models are distinguished by the special consequences of the MFV assumption: the very narrow width of the mediator and its extreme sensitivity to which decays are kinematically available, and the loop-induced coupling to gluons. The interaction Lagrangians are
 
 \begin{fullwidth}
-  \begin{eqnarray} {\cal L}_{\phi} & = &
+  \begin{eqnarray} \mathcal{L}_{\phi} & = &
     % {\cal L}_{\rm SM}+i\bar{\chiDM} \slashed{\partial} \chiDM + \mDM \bar{\chiDM}\chiDM + \left| \partial_\mu \phi \right|^2+\frac{1}{2}m_\phi^2 \phi^2 + \nonumber \\
     % & &
           \gdm \phi \bar{\chiDM}\chiDM+ \frac{\phi}{\sqrt{2}} \sum_i \left(g_u y_i^u \bar{u}_i u_i+g_d y_i^d \bar{d}_i d_i+g_\ell y_i^\ell \bar{\ell}_i \ell_i\right)\, , \label{eq:scalarlag} \\
-    {\cal L}_{a} & = &
+    \mathcal{L}_{a} & = &
     % {\cal L}_{\rm SM}+i\bar{\chiDM} \slashed{\partial} \chiDM + \mDM \bar{\chiDM}\chiDM + \left| \partial_\mu a \right|^2+\frac{1}{2}m_a^2 a^2 + \nonumber \\
     % & &
           i\gdm a \bar{\chiDM}\gamma_5\chiDM+ \frac{i a}{\sqrt{2}}\sum_i  \left(g_u y_i^u \bar{u}_i \gamma_5 u_i+g_d y_i^d \bar{d}_i \gamma_5 d_i+ \right. \nonumber \\
@@ -1094,7 +1094,7 @@ this scaling is only approximate (up to 20\%)  and relies on the narrow width ap
 
 \begin{figure}[!ht]
 	\begin{center}
-		\includegraphics[width=0.95\textwidth]{figures/ttbar/xVSwom_mphi_400_mchi_1_proc_S.png}
+		\includegraphics[width=0.65\textwidth]{figures/ttbar/xVSwom_mphi_400_mchi_1_proc_S.png}
 		\vspace{2mm}
 		\caption{\label{fig:xsec_scaling} An example comparing a simple cross section scaling versus the computation from the \madgraph generator, for a scalar $t \bar{t}$+\MET model with $m_{\phi}=400\,{\rm GeV}$, $\mdm=1\,{\rm GeV}$ and all couplings set to unity. In this example, the scaling relationship holds for $\Gamma_{\phi}/m_{\phi}$ below $0.2$, beyond which finite width effects become important and the simple scaling breaks down.}
 	\end{center}
