--- a/doc/tex/SingleB.tex
+++ b/doc/tex/SingleB.tex
@@ -33,7 +33,7 @@ but such models will have to be investigate on a longer timescale with respect t
 
 The Lagrangian considered is given by
 \begin{equation}
-  {\cal L} \supset g \Phi^* \bar\chi_b b_R  + {\rm h.c.}
+  - {\mathcal{L}} \supset g \Phi^* \bar\chi_b b_R  + {\rm h.c.}
 \end{equation}
 
 %The QCD production of the colored mediator introduces a tree-level $b$+MET diagram with a $g_s*g$ dependence, which could be scaled. 
