--- a/doc/tex/SummaryTable.tex
+++ b/doc/tex/SummaryTable.tex
@@ -1,6 +1,7 @@
 %\clearpage 
 
 \begin{footnotesize}
+
  
 \begin{table*}[!p]
 	\centering\scriptsize
@@ -14,13 +15,13 @@
 
 	Signature & State of the art calculation and tools & Implementation & References \\ 
 	\cmidrule(r){1-4} 
-    jet + \MET{} & \textbf{NLO+PS (\powheg, SVN r3059)} & \cite{ForumSVN_DMA, ForumSVN_DMV} & \parbox{4cm} {\cite{Haisch:2013ata,Haisch:2015ioa,Alioli:2010xd,Nason:2004rx,Frixione:2007vw} }\\ 
-	& NLO+PS (\textit{DMsimp} UFO + \madgraph v2.3.3) & \cite{NewMadgraphModels} & \parbox{4cm} {\cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} } \\ 		
-	& NLO (\mcfm v7.0) & Upon request & \parbox{4cm} {\cite{Fox:2012ru,Harris:2014hga} }\\ 
-	$W/Z/\gamma$ + \MET{} & \textbf{LO+PS (UFO + \madgraph v2.3.3)} & \cite{ForumSVN_EW_DMV} & 
-	\parbox{4cm} {\cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }  \\ 
-	$W/Z/\gamma$ + \MET{} & NLO+PS (\textit{DMsimp} UFO + \madgraph v2.3.3) & \cite{NewMadgraphModels} & 
-	\parbox{4cm} {\cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }  \\ 
+    jet + \MET{} & \textbf{NLO+PS (\powheg, SVN r3059)} & \cite{ForumSVN_DMA, ForumSVN_DMV} & \parbox{3.5cm} {\cite{Haisch:2013ata,Haisch:2015ioa,Alioli:2010xd,Nason:2004rx,Frixione:2007vw} }\\ 
+	& NLO+PS (\textit{DMsimp} UFO + \madgraph v2.3.0) & \cite{NewMadgraphModels} & \parbox{3.5cm} {\cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} } \\ 		
+	& NLO (\mcfm v7.0) & Upon request & \parbox{3.5cm} {\cite{Fox:2012ru,Harris:2014hga} }\\[5pt] 
+	$W/Z/\gamma$ + \MET{} & \textbf{LO+PS (UFO + \madgraph v2.2.3)} & \cite{ForumSVN_EW_DMV} & 
+	\parbox{3.5cm} {\cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }  \\ 
+	 & NLO+PS (\textit{DMsimp} UFO + \madgraph v2.3.0) & \cite{NewMadgraphModels} & 
+	\parbox{3.5cm} {\cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }  \\ 
 
 	\cmidrule(r){1-4} 
 	\multicolumn{4}{c}{scalar/pseudoscalar mediator, \schannel (Sec.~\ref{sec:monojet_scalar})}\\
@@ -28,11 +29,13 @@
 	Signature & State of the art calculation and tools& Implementation & References \\ 
 		\cmidrule(r){1-4} 
 		
-	jet + \MET{} & \textbf{LO+PS, top loop (\powheg, r3059)} &  \cite{ForumSVN_DMS_tloop, ForumSVN_DMP_tloop} &  \parbox{4cm} {\cite{Haisch:2013ata,Haisch:2015ioa,Alioli:2010xd,Nason:2004rx,Frixione:2007vw} } \\ 
-	& LO, top loop (\mcfm v7.0) & Upon request & \cite{Fox:2012ru,Harris:2014hga} \\ 
-	& LO+PS, top loop (\textit{DMsimp} UFO+\madgraph) & \cite{NewMadgraphModels} & \parbox{4cm} {\cite{Alwall:2014hca,Hirschi:2011pa,Alloul:2013bka,Degrande:2011ua} }\\ 		
-	$W/Z/\gamma$ + \MET{} & \textbf{LO+PS (UFO + \madgraph v2.2.3}) & \cite{} & \parbox{4cm} { \cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }\\ 
-    $t\bar{t},b\bar{b}$+ \MET{} & \textbf{LO+PS (UFO + \madgraph v2.2.3}) &  \cite{ForumSVN_DMTTBar} & \parbox{4cm} { \cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }\\ 
+	jet + \MET{} & \textbf{LO+PS, top loop (\powheg, r3059)} &  \cite{ForumSVN_DMS_tloop, ForumSVN_DMP_tloop} &  \parbox{3.5cm} {\cite{Haisch:2013ata,Haisch:2015ioa,Alioli:2010xd,Nason:2004rx,Frixione:2007vw} } \\ 
+	& LO+PS, top loop (\textit{DMsimp} UFO + \madgraph v.2.3.0) & \cite{NewMadgraphModels} & \parbox{3.5cm} {\cite{Alwall:2014hca,Hirschi:2011pa,Alloul:2013bka,Degrande:2011ua} }\\ 		
+	& LO, top loop (\mcfm v7.0) & Upon request & \cite{Fox:2012ru,Harris:2014hga} \\ [5pt] 
+	$W/Z/\gamma$ + \MET{} & \textbf{LO+PS (UFO + \madgraph v2.2.3}) & \cite{} & \parbox{3.5cm} { \cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }\\ [5pt] 
+    $t\bar{t},b\bar{b}$+ \MET{} & \textbf{LO+PS (UFO + \madgraph v2.2.3}) &  \cite{ForumSVN_DMTTBar} & \parbox{3.5cm} { \cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }\\ 
+    	& NLO+PS (\textit{DMsimp} UFO + \madgraph v2.3.0) & \cite{NewMadgraphModels} & \parbox{3.5cm} {\cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} } \\ 		
+
     
 %%    DMS contains S and P mediators that couple to the quark in a Yukawa-like way (at NLO). 
 %%    Since top quarks are not present in the proton, here the processes that dominate at tree-level are
@@ -47,10 +50,10 @@
 	Signature & State of the art calculation and tools & Implementation & References \\ 
 		\cmidrule(r){1-4} 
 		
-	jet(s) + \MET{} (2 quark generations) & LO+PS (UFO + \madgraph v2.2.3) & \cite{ForumSVN_TChannel_PapucciVichiZurek}&  \parbox{4cm} {\cite{Papucci:2014iwa,Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }\\ 
-	jet(s) + \MET{} (3 quark generations) & \textbf{LO+PS (UFO + \madgraph v2.2.3)} & \cite{ForumSVN_TChannel_Amelia}&  \parbox{4cm} {\cite{Bell:2012rg,Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} } \\ 
-	$W/Z/\gamma$ + \MET{} & \textbf{LO+PS (UFO + \madgraph v2.2.3)} & TBC  & \parbox{4cm} {\cite{Bell:2012rg, Alwall:2014hca,Alloul:2013bka,Degrande:2011ua}}\\ 
-    $b$ + \MET{} & \textbf{LO+PS (UFO + \madgraph v2.2.3)} & \cite{ForumSVN_DMSingleB}  & \parbox{4cm} {\cite{Lin:2013sca,Agrawal:2014una, Alwall:2014hca,Alloul:2013bka,Degrande:2011ua}}\\ 
+	jet(s) + \MET{} (2-quark gens.) & LO+PS (UFO + \madgraph v2.2.3) & \cite{ForumSVN_TChannel_PapucciVichiZurek}&  \parbox{3.5cm} {\cite{Papucci:2014iwa,Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }\\ [5pt] 
+	jet(s) + \MET{} (3-quark gens.) & \textbf{LO+PS (UFO + \madgraph v2.2.3)} & \cite{ForumSVN_TChannel_Amelia}&  \parbox{3.5cm} {\cite{Bell:2012rg,Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} } \\ [5pt] 
+	$W/Z/\gamma$ + \MET{} & \textbf{LO+PS (UFO + \madgraph v2.2.3)} & TBC  & \parbox{3.5cm} {\cite{Bell:2012rg, Alwall:2014hca,Alloul:2013bka,Degrande:2011ua}}\\ [5pt] 
+    $b$ + \MET{} & \textbf{LO+PS (UFO + \madgraph v2.2.3)} & \cite{ForumSVN_DMSingleB}  & \parbox{3.5cm} {\cite{Lin:2013sca,Agrawal:2014una, Alwall:2014hca,Alloul:2013bka,Degrande:2011ua}}\\ 
 			
 	\cmidrule(r){1-4} 
 	\multicolumn{4}{c}{Specific simplified models with EW bosons (Sec.~\ref{sec:monoHiggs})}\\
@@ -58,9 +61,9 @@
 	Signature and model & State of the art calculation and tools & Implementation & References \\ 
 	\cmidrule(r){1-4} 
 	
-	Higgs + \MET{}, vector mediator & \textbf{LO+PS (UFO + \madgraph v2.2.3)} & \cite{ForumSVN_EWMonoHiggs}& \parbox{4cm} {\cite{Carpenter:2013xra,Berlin:2014cfa,Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }\\ 
-	Higgs + \MET{}, scalar mediator & \textbf{LO+PS (UFO + \madgraph v2.2.3)} & \cite{ForumSVN_EWMonoHiggs}& \parbox{4cm} {\cite{Carpenter:2013xra,Berlin:2014cfa,Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }\\ 
-	Higgs + \MET{}, 2HDM & \textbf{LO+PS (UFO + \madgraph v2.2.3)} & \cite{ForumSVN_EWMonoHiggs_2HDM}& \parbox{4cm} {\cite{Berlin:2014cfa,Alwall:2014hca,Alloul:2013bka,Degrande:2011ua}} \\ 
+	Higgs + \MET{}, vector med. & \textbf{LO+PS (UFO + \madgraph v2.2.3)} & \cite{ForumSVN_EWMonoHiggs}& \parbox{3.5cm} {\cite{Carpenter:2013xra,Berlin:2014cfa,Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }\\ 
+	Higgs + \MET{}, scalar med. & \textbf{LO+PS (UFO + \madgraph v2.2.3)} & \cite{ForumSVN_EWMonoHiggs}& \parbox{3.5cm} {\cite{Carpenter:2013xra,Berlin:2014cfa,Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }\\ 
+	Higgs + \MET{}, 2HDM & \textbf{LO+PS (UFO + \madgraph v2.2.3)} & \cite{ForumSVN_EWMonoHiggs_2HDM}& \parbox{3.5cm} {\cite{Berlin:2014cfa,Alwall:2014hca,Alloul:2013bka,Degrande:2011ua}} \\ 
 
 
 	\cmidrule(r){1-4} 
@@ -69,10 +72,10 @@
 	Signature and model & State of the art calculation and tools & Implementation & References \\ 
 	\cmidrule(r){1-4} 
 	
-	 $W/Z/\gamma$ + \MET{}, dimension-7& \textbf{LO+PS (UFO + \madgraph v2.2.3)} & \cite{ForumSVN_EWEFTD7}& \parbox{4cm} {\cite{Cotta:2012nj, Carpenter:2012rg, Crivellin:2015wva,Berlin:2014cfa,Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }\\ 
-	 Higgs + \MET{}, dimension 4 and 5 & \textbf{LO+PS (UFO + \madgraph v2.2.3)} & \cite{ForumSVN_monoHEFTD5}& \parbox{4cm} {\cite{Carpenter:2013xra,Petrov:2013nia,Berlin:2014cfa,Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }\\ 
-	 Higgs + \MET{}, dimension 8 & \textbf{LO+PS (UFO + \madgraph v2.2.3)} & \cite{ForumSVN_EWMonoHiggs}&
-	 \parbox{4cm} {\cite{Carpenter:2013xra,Petrov:2013nia,Berlin:2014cfa,Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }\\ 
+	 $W/Z/\gamma$ + \MET{}, dim-7& \textbf{LO+PS (UFO + \madgraph v2.2.3)} & \cite{ForumSVN_EWEFTD7}& \parbox{3.5cm} {\cite{Cotta:2012nj, Carpenter:2012rg, Crivellin:2015wva,Berlin:2014cfa,Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }\\ 
+	 Higgs + \MET{}, dim-4/dim-5 & \textbf{LO+PS (UFO + \madgraph v2.2.3)} & \cite{ForumSVN_monoHEFTD5}& \parbox{3.5cm} {\cite{Carpenter:2013xra,Petrov:2013nia,Berlin:2014cfa,Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }\\ 
+	 Higgs + \MET{}, dim-8 & \textbf{LO+PS (UFO + \madgraph v2.2.3)} & \cite{ForumSVN_EWMonoHiggs}&
+	 \parbox{3.5cm} {\cite{Carpenter:2013xra,Petrov:2013nia,Berlin:2014cfa,Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }\\ 
 
 	
 	\bottomrule 
