Reviewers comments TICK
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@401 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -89,7 +89,7 @@ are the fields of the gauge bosons, $\chiDM$ denotes the Dark Matter fields
 and $\Lambda_5$ is the effective field theory scale. Note that these operators are of true dimension 7, 
 but reduce to effective dimension 5 once the Higgs vacuum expectation values, 
 contained in the W and Z mass terms, are inserted.  
-As such, one expects  these that operators would naturally arise in UV complete models where Dark Matter 
+As such, one expects that these operators would naturally arise in UV complete models where Dark Matter 
 interacts via a Higgs portal where heavy mediators couple to the Higgs or other fields in an extended Higgs sector. 
 In such models the full theory may be expected to contain additional operators with Higgs-Dark Matter couplings~\cite{Djouadi:2012zc}.
 The above operator also induces signatures with 
