--- a/doc/tex/EWSpecificModels_VAMediators.tex
+++ b/doc/tex/EWSpecificModels_VAMediators.tex
@@ -117,7 +117,7 @@ shown in Fig.~\ref{fig:DMV_EW_kinematics_SVMed}.
 
 \begin{figure*}[h!]
 \centering  
-\subfloat[Missing transverse momentum distribution for the photon+\MET final state, for 
+\subfloat[Leading photon transverse momentum distribution for the photon+\MET final state, for 
 different mediator mass choices, for \mdm=10~\gev.\label{fig:DMV_EW_gamma_MET_SVMed}]{%
 \includegraphics[width=0.49\textwidth]{figures/EW/ptGamma_filter120GeV_dmV_dm10GeV}
 }
