--- a/doc/tex/MonojetLikeModels_Appendix.tex
+++ b/doc/tex/MonojetLikeModels_Appendix.tex
@@ -256,7 +256,7 @@ The \texttt{Merging:Process} command specifies the lowest parton emission proces
  The largest differences among the samples are visible for the $1\rightarrow2$ jets transition where the 30\,\gev and 50\,\gev scale lead to a drop of the rates around the matching scale values. On the contrary, there is a hint of an increased rate around the matching scale value in the sample generated with the 90\,\gev scale. Therefore, we recommend to use 80\,\gev as the baseline matching scale.
 
 
- \begin{figure}[h!]
+ \begin{figure*}[h!]
  	\centering  
  	\subfloat[$1\rightarrow2$ jets]{%
  		\includegraphics[width=0.45\linewidth]{figures/monojet_appendix/HistoJet1to2_30.pdf}
@@ -275,10 +275,10 @@ The \texttt{Merging:Process} command specifies the lowest parton emission proces
  	}
  	\caption{Distributions of differential jet rates $\frac{dN_{i\to j}}{d \log_{10}(k_\textrm{cut})}$ for EFT D5 sample with CKKW-L matching scale at 30\,\gev. The 0-, 1- and 2-parton emission samples are generated separately and indicated in the plots as Prod 1, Prod 2 and Prod 3, respectively. A vertical line is drawn at the matching scale.}
  	\label{fig:CKKW_D5_30}
- \end{figure}
+ \end{figure*}
 
 
- \begin{figure}[h!]
+ \begin{figure*}[h!]
  	\centering  
  	\subfloat[$1\rightarrow2$ jets]{%
  		\includegraphics[width=0.45\linewidth]{figures/monojet_appendix/HistoJet1to2_80.pdf}
@@ -297,7 +297,7 @@ The \texttt{Merging:Process} command specifies the lowest parton emission proces
  	}
    \caption{Distributions of differential jet rates $\frac{dN_{i\to j}}{d \log_{10}(k_\textrm{cut})}$ for EFT D5 sample with CKKW-L matching scale at 80\,\gev. The 0-, 1- and 2-parton emission samples are generated separately and indicated in the plots as Prod 1, Prod 2 and Prod 3, respectively. A vertical line is drawn at the matching scale.}
    \label{fig:CKKW_D5_80}
- \end{figure}
+ \end{figure*}
 
 
  \begin{figure*}[h!]
