--- a/doc/tex/TChannelModels.tex
+++ b/doc/tex/TChannelModels.tex
@@ -424,7 +424,7 @@ a simplified analysis selection (cuts on the leading jet \pT$>$150 GeV and $\eta
 %A scan over the width was not available for this report.  Thus we recommend scanning a range of 
 %possible widths as discussed in a more-limited way for the \schannel mono-jet, spanning from the minimal 
 %width to a value approaching the particle limit (for example, $\Gamma \approx \Mphi/3$ in Ref.~\cite{Papucci:2014iwa}).
-Figure~\ref{fig:monojet_tchannel} (b) also shows that, if the DM mass is low and the mediator width is narrow and produced on-shell,
+Figure~\ref{fig:monojet_tchannel} (b) also shows that, if the DM mass is low and the mediator is produced on-shell and its width is narrow,
 the cross-section is dominated by $qg \rightarrow q\chi\chi$ diagram. The mediator energy is then
 split evenly between the light DM particles and the quark, leading to a broad enhancement at \mMed/2. 
 
