--- a/doc/tex/EWSpecificModels_Appendix.tex
+++ b/doc/tex/EWSpecificModels_Appendix.tex
@@ -172,8 +172,8 @@ relevant to a specific LHC signature is only 1-2 dimensional. In the
 mono-jet case, one can use two separate simplified models, a
 $gg\to h_1 h_1+g$ process (via Higgs mediator) and a
 $q\bar{q}\to h_1 h_2+g$ ($gq\to h_1 h_2+q$) process (using Z-boson
-mediator) to capture the physics relevant to the search.
-
+mediator) to capture the physics relevant to the search. The cross sections for the 
+various signatures produced by this model are displayed in Fig.~\ref{fig:i2HDM_xsecs}.
 
 \begin{table*}[htb]
   \fontfamily{ppl}\selectfont
@@ -196,6 +196,11 @@ mediator) to capture the physics relevant to the search.
   \label{tab:i2HDMbenchMarks}
 \end{table*}
 
+\begin{figure}[htb]
+	\includegraphics[width=\textwidth]{figures/EW/i2HDM/i2HDM_crossSections.pdf} 
+	\caption{LHC cross section at 13~\tev for various signatures, from \cite{Belyaev:2015tap}.}
+	\label{fig:i2HDM_xsecs}
+\end{figure}
 \clearpage
 
 %\section{Tabulated cross-sections}
