--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -132,7 +132,7 @@ important to restrict the scope and timescale to the following:
 
 We assume that interactions exist between Standard Model hadrons
 and the particles that constitute cosmological Dark Matter. If this
-is not the case, then proton collisions will not produce Dark Matter
+is not the case, then proton collisions will not directly produce Dark Matter
 particles, and Dark Matter will not scatter off nuclei in direct
 detection experiments.
 
@@ -152,7 +152,7 @@ scenario, and with the imminent re-start of the LHC our report relies
 heavily on a large body of existing theoretical work which assumed Dirac fermionic Dark Matter. 
 
 Different spins of Dark Matter particles will typically
-give similar results. Some exceptions exist. For example, the choice of Majorana fermions forbids some
+give similar results. Exceptions exist: For example, the choice of Majorana fermions forbids some
 processes that are allowed for Dirac fermions~\cite{Goodman:2010yf}.
 Aside from these, adjusting the choice of Dirac or Majorana fermions or scalars will produce only minor changes
 in the kinematic distributions of the visible particle and is expected to have little effect
@@ -169,7 +169,7 @@ fermion Dark Matter should be sufficient as benchmarks for the upcoming Run-2 se
 One advantage of collider experiments lies in their ability to study
 and possibly characterize the mediator. A discovery of an anomalous
 \MET signature at the LHC would not uniquely imply discovery of dark
-matter, while at the same time discovery of an anomalous and
+matter, while at the same time e.g. discovery of an anomalous and
 annually-modulated signal in a direct-detection experiment would leave
 unanswered many questions about the nature of the interaction that
 could be resolved by the simultaneous discovery of a new mediator
@@ -213,7 +213,7 @@ than the mass of the particle and that narrow mediators are sufficiently light.
 The particle content of the models chosen as benchmarks is limited to
 one single kind of DM whose self-interactions are not relevant for LHC
 phenomenology, and to one type of SM/DM interaction at a time. These
-assumptions only add a limited number of new particles to the
+assumptions only add a limited number of new particles and new interactions to the
 SM. These simplified models, independently explored by different
 experimental analyses, can be used as starting points to build more
 complete theories. Even though this factorized picture does not always
