small cosmetic comments
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@405 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EWSpecificModels_VAMediators.tex
+++ b/doc/tex/EWSpecificModels_VAMediators.tex
@@ -25,7 +25,7 @@ However, the presence of photons,
 leptons from W and Z decays,
 and W or Z bosons decaying hadronically
 allow backgrounds to be rejected more effectively,
-making Z/gamma/W+\MET searches
+making Z/$\gamma$/W+\MET searches
 still worth comparing with searches in the jet+\MET final state.
 
 In the case of a \spinone mediator,
